# donna-life-os

./: .env.example  .gitignore  AGENTS.md  README.md  core_py_tutorial.ipynb  pyproject.toml  start-backend.sh  start-frontend.sh  to-do.md
donna_life_os/: __init__.py  cli.py  config.py  core.py  prompt.md
donna_life_os/.claude/agents/: context-updater.md
donna_life_os/.claude/skills/writing/: content-types.md
donna_life_os/web/: __init__.py  main.py
donna_life_os/web/routes/: chat.py  files.py  notes.py
guides/: date_handling.md  development.md  handling_time.md  sdk-patterns.md
src/: __init__.py  agent.py  cli.py  config.py  core.py  prompt.md  prompt.txt
src/.claude/agents/: file-search.md
src/.claude/skills/current_context_updater/: SKILL.md
src/.claude/skills/onboarding/: SKILL.md
src/.claude/skills/writing/: SKILL.md  content-types.md
src/web/: main.py
src/web/auth/: __init__.py  config.py  middleware.py  routes.py
src/web/routes/: __init__.py  chat.py  files.py  notes.py
src/web/utils/: __init__.py  markdown.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
web/e2e/: screenshot-test.spec.ts  verify-fix.spec.ts
web/screenshots/: BUG_REPORT.md
web/src/: App.tsx  index.css  main.tsx
web/src/components/Auth/: LoginPage.tsx  UserMenu.tsx  (+1 more)
web/src/hooks/: index.ts  useAuth.ts  useChatWebSocket.ts  useFileWatcher.ts  useNotes.ts
web/src/stores/: index.ts  useAuthStore.ts  useChatStore.ts  useDevMode.ts  useMobileNav.ts  useNotesNav.ts
web/src/types/: index.ts
(+35 files in other folders)
