[project]
name = "donna-life-os"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.19",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0",
    "rich>=14.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "watchdog>=6.0.0",
    "python-multipart>=0.0.18",
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
    "httpx>=0.27.0",
    "starlette-session>=0.4.3",
    "tzlocal>=5.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
]
